<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CkeckOut.activities.CompleteConfirmFragment">

    <LinearLayout
        android:padding="@dimen/margin_20"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtOrderID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotu_regular"
                android:text="@string/order_000002453354"
                android:textColor="@color/color_black_2"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtStatus"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_processing"
                android:textColor="@color/color_blue_1"
                android:textSize="@dimen/text_size_13"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:fontFamily="@font/jost_regular"
                />
        </RelativeLayout>
        <TextView
            android:id="@+id/txtDate"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date_order_detail_test"
            android:textColor="@color/color_black_2"
            android:textSize="@dimen/text_size_12"
            android:textStyle="bold"
            android:fontFamily="@font/jost_light"
            />
        <TextView
            android:layout_marginTop="@dimen/margin_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_shipping_address"
            android:textColor="@color/color_black_2"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:fontFamily="@font/jost_regular"
            />

        <TextView
            android:id="@+id/txtName"
            android:layout_marginTop="@dimen/margin_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name_test"
            android:textColor="@color/color_black_4"
            android:textSize="@dimen/text_size_14"
            android:fontFamily="@font/jost_light"
            />

        <TextView
            android:id="@+id/txtAddress"
            android:layout_marginTop="@dimen/margin_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_address_order_details_test"
            android:textColor="@color/color_black_4"
            android:textSize="@dimen/text_size_14"
            android:fontFamily="@font/jost_light"
            />

        <TextView
            android:id="@+id/txtPostCode"
            android:layout_marginTop="@dimen/margin_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_post_code_test"
            android:textColor="@color/color_black_4"
            android:textSize="@dimen/text_size_14"
            android:fontFamily="@font/jost_light"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:background="@color/color_gray_2"
            android:layout_marginTop="@dimen/margin_20"
            />

        <TextView
            android:layout_marginTop="@dimen/margin_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_payment_method"
            android:textColor="@color/color_black_2"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:fontFamily="@font/jost_regular"
            />

        <LinearLayout
            android:layout_marginTop="@dimen/margin_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/imgCard"
                android:layout_width="@dimen/margin_24"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_visa_blue_background" />

            <TextView
                android:id="@+id/txtNumberCard"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_number_card_test"
                android:textColor="@color/color_black_2"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                android:fontFamily="@font/jost_light"
                android:layout_marginLeft="@dimen/margin_12"

                />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:background="@color/color_gray_2"
            android:layout_marginTop="@dimen/margin_20"
            />

        <TextView
            android:layout_marginTop="@dimen/margin_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_order_details"
            android:textColor="@color/color_black_2"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:fontFamily="@font/jost_regular"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_Complete_Confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_17" />

        <RelativeLayout
            android:layout_marginTop="@dimen/margin_46_77dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_light"
                android:text="Number of Items"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/jost_light"
                android:text="@string/_3"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_14dp" />
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_light"
                android:text="@string/subtotal"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/txtSubtal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/jost_light"
                android:text="@string/_179_30"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_14" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_light"
                android:text="@string/text_shipping_fee"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/txtShippingFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/jost_light"
                android:text="@string/_5_00"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_14" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_light"
                android:text="@string/text_tax"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/txtTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/jost_light"
                android:text="@string/_0_00"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_14" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:background="@color/color_gray_2"
            android:layout_marginTop="@dimen/margin_16"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:background="@color/color_gray_2"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_light"
                android:text="@string/balance_points"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/_50"
                android:fontFamily="@font/jost_light"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_black_1"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_light"
                android:text="@string/redeemed_50_points"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/_50_00"
                android:fontFamily="@font/jost_light"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_black_1"
                />

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@color/color_yellow_2"
            android:fontFamily="@font/jost_medium"
            android:gravity="center"
            android:padding="@dimen/margin_10"
            android:text="@string/earned_up_to_17_points"
            android:textColor="@color/color_yellow_3"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="@dimen/margin_25"
            android:gravity="center"
            android:fontFamily="@font/jost_regular"
            android:text="@string/text_get_invoice"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:id="@+id/btnGetInvoice"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            android:background="@drawable/corner_tv_black"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>