<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/width_300dp"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_20dp"
    android:background="@drawable/corner_shipping_item">

    <TextView
        android:text="Jane Smith"
        android:textSize="@dimen/text_size_14dp"
        android:fontFamily="@font/jost_regular"
        android:textColor="@color/color_black_1"
        android:id="@+id/textview_name_of_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textview_number_of_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_name_of_payment"
        android:layout_marginTop="@dimen/padding_6dp"
        android:fontFamily="@font/jost_regular"
        android:text="@string/xxxx_4693"
        android:textColor="@color/color_black_1"
        android:textSize="@dimen/text_size_14dp" />

    <TextView
        android:id="@+id/textview_expire_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_number_of_payment"
        android:layout_marginTop="@dimen/padding_6dp"
        android:fontFamily="@font/jost_light"
        android:text="@string/_12_23"
        android:textColor="@color/color_black_1"
        android:textSize="@dimen/text_size_14dp" />
    <TextView
        android:text="@string/edit"
        android:textSize="@dimen/text_size_12dp"
        android:fontFamily="@font/jost_light"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="@dimen/width_40dp"
        android:layout_height="@dimen/height_15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/margin_56dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_visa" />

</RelativeLayout>